--- a/matchingapp/static/matchingapp/style.css
+++ b/matchingapp/static/matchingapp/style.css
@@ -1,3 +1,7 @@
+body{
+    font-family: 'Roboto', sans-serif;
+}
+
 .header{
   font: 400 100px/1.5 'Pacifico', Helvetica, sans-serif;
   text-align: center;
