--- a/matchingapp/templates/matchingapp/home.html
+++ b/matchingapp/templates/matchingapp/home.html
@@ -62,6 +62,21 @@
         if(flag === false){
           returnToLogin();
         }
+				else{
+					loadUsers();
+				}
+      }
+
+			function loadUsers(){
+        $.ajax({
+           async: false,
+           type: 'GET',
+           url: '/matchingapp/lookupMatches/',
+           dataType: 'json',
+           success: function(data){
+
+           }
+        });
       }
 
       $(document).on('click', '#logout', function (e){
