--- a/matchingapp/templates/matchingapp/register.html
+++ b/matchingapp/templates/matchingapp/register.html
@@ -35,17 +35,25 @@
 					</div>
 					<div class="form-group">
 						<span class="dropdown">
-							<label>Date of Birth</label>
-							<select id="day"></select>
-							<select id="month">
-								<option value="january">January</option><option value="february">February</option>
-								<option value="march">March</option><option value="april">April</option>
-								<option value="may">May</option><option value="june">June</option>
-								<option value="july">July</option><option value="august">August</option>
-								<option value="september">September</option><option value="october">October</option>
-								<option value="november">November</option><option value="december">December</option>
-							</select>
-							<select id="year"></select>
+							<label class="mr-sm-2" for="inlineFormCustomSelect">Date of Birth</label>
+							<div class="row">
+								<div class="col">
+									<select id="day" class="custom-select mb-2 mr-sm-2 mb-sm-0"></select>
+								</div>
+								<div class="col">
+									<select id="month" class="custom-select mb-2 mr-sm-2 mb-sm-0">
+										<option value="january">January</option><option value="february">February</option>
+										<option value="march">March</option><option value="april">April</option>
+										<option value="may">May</option><option value="june">June</option>
+										<option value="july">July</option><option value="august">August</option>
+										<option value="september">September</option><option value="october">October</option>
+										<option value="november">November</option><option value="december">December</option>
+									</select>
+								</div>
+								<div class="col">
+									<select id="year" class="custom-select mb-2 mr-sm-2 mb-sm-0"></select>
+								</div>
+							</div>
 						</span>
 					</div>
 					<br/>
