Changed Page order

--- a/matchingapp/templates/matchingapp/base.html
+++ b/matchingapp/templates/matchingapp/base.html
@@ -20,7 +20,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   </head>
   {% block body %}<body> {% endblock %}
-    <h1 class="header"><a href="/matchingapp/home">Vijay Island</a></h1><br/>
+    <h1 class="header"><a href="/matchingapp/home">Vinder</a></h1><br/>
     <nav class="navbar navbar-expand-lg navbar-light bg-light py-0">
       <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav">
@@ -31,7 +31,7 @@
             <a class="nav-link" href="/matchingapp/profile/">Profile</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="/matchingapp/settings/">Settings</a>
           </li>
         </ul>
       </div>
