--- a/matchingapp/templates/matchingapp/home.html
+++ b/matchingapp/templates/matchingapp/home.html
@@ -5,8 +5,8 @@
 	{% block body %}<body onload="checkLoginStatus()">{% endblock %}
 		{% block content %}
 		<div class="bodStyle container">
-	    <br/><h1> Welcome to Vijay Island! </h1><br/>
-			<p>Where you get to take vijay's virginity</p>
+	    <br/><h1> Welcome to Vinder! </h1><br/>
+			<p>Meet hot singles 😜</p>
 			<div class="row">
 				<div class="col">
 					<div class="card" style="width: 18rem;">
