--- a/matchingapp/templates/matchingapp/register.html
+++ b/matchingapp/templates/matchingapp/register.html
@@ -56,6 +56,10 @@
 							</div>
 						</span>
 					</div>
+					<div class="form-group">
+						<label for="profileImage">Profile Image</label>
+						<input class="input form-control" id="profileImage" type="file" name="profileImage"/>
+					</div>
 					<br/>
 					<ul id = 'list'></ul>
 					<label id = "message" style = "display: none;"></label>
