--- a/matchingapp/templates/matchingapp/settings.html
+++ b/matchingapp/templates/matchingapp/settings.html
@@ -67,6 +67,11 @@
       	<label for="bio">Bio</label>
 				<textarea name="bio" id="bio" class="form-control" rows="8" cols="80" placeholder="Bio"></textarea>
 			</div>
+			<div class="container">
+				<h5><label>Hobbies</label></h5>
+				<ol id="hobbyList">
+				</ol>
+			</div>
       <button class="btn btn-primary" onclick="updateUser()"> Update Profile </button>
 			<br/><br/>
     </div>
