--- a/matchingapp/templates/matchingapp/home.html
+++ b/matchingapp/templates/matchingapp/home.html
@@ -37,27 +37,32 @@
 		   			}
 		      }
 
-			  	function getAllProfiles(){
-			        $.ajax({
-			           async: false,
-			           type: 'GET',
-			           url: '/matchingapp/getProfiles/',
-			           dataType: 'json',
-			           success: function(data){
-			      				loadProfiles(data)
-			           }
-			        });
-			      }
+					function getAllProfiles()
+					{
+					  $.ajax({
+					  	async: false,
+					   	type: 'GET',
+					   	url: '/matchingapp/getProfiles/',
+					   	dataType: 'json',
+					    success: function(content)
+							{
+								loadProfiles(content.profiles, content.users)
+					    }
+					  });
+					}
 
-			  	function loadProfiles(profiles){
-			    	for(var i = 0; i < profiles.length; i++){
-			     		var itemDiv = $("<div class='col'>").
-			       	append( $("<div class='card'>")).
-			     		append( $("<img class='card-img-top' src='...' alt='Card image cap'><div class='card-body'>")).
-			     		append( $("<h5 class='card-title'>" + profiles[i].user_id + "</h5><p class='card-text'>Some quick example text to build on the card title and make up the bulk of the card's content.</p><a href='#' class='btn btnCard'>Like Profile <span><i class='fas fa-thumbs-up'></i></a>"));
-			      	$(".row").append(itemDiv);
-			    	}
-			     }
+						function loadProfiles(profiles, users)
+						{
+							for(var j = 0; j < users.length; j++)
+							{
+								var itemDiv = $("<div class='col'>").
+					    	append( $("<div class='card'>")).
+								append( $("<img class='card-img-top' src='...' alt='Card image cap'><div class='card-body'>")).
+								append( $("<h5 class='card-title'>" + users[j].username + "</h5><p class='card-text'>" + profiles[j].bio + "</p><a href='#' class='btn btnCard'>Like Profile <span><i class='fas fa-thumbs-up'></i></a>"));
+
+					 				$(".row").append(itemDiv);
+							}
+			      }
 
 					$(document).on('click', '#logout', function (e){
 					    e.preventDefault();
