--- a/matchingapp/templates/matchingapp/base.html
+++ b/matchingapp/templates/matchingapp/base.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
   </head>
   {% block body %}<body> {% endblock %}
     <h1 class="header"><a href="/matchingapp/home">Vinder</a></h1><br/>
@@ -39,6 +40,9 @@
         <span class="navbar-toggler-icon"></span>
       </button>
     </nav>
+    <script>
+      var csrftoken = Cookies.get('csrftoken');
+    </script>
     {% block content %}{% endblock %}
   </body>
 </html>
