--- a/matchingapp/templates/matchingapp/register.html
+++ b/matchingapp/templates/matchingapp/register.html
@@ -4,7 +4,7 @@
 		{% block stylesheet %}<link rel="stylesheet" type="text/css" href="{% static 'matchingapp/registerstyle.css' %}">{% endblock %}
 	{% block body %}<body onload="loadLists()"> {% endblock %}
 		{% block content %}
-			<form id="form" class="register-form container" method="POST" enctype="multipart/form-data">
+			<form id="form" class="register-form container" method="POST" enctype="multipart/form-data">{% csrf_token %}
 					<div class="form-group">
 						<label for="username">Username</label>
 						<input class="input form-control" id="username" type="text" name="username" placeholder="Username" autofocus/>
@@ -58,7 +58,7 @@
 					</div>
 					<div class="form-group">
 						<label for="profileImage">Profile Image</label>
-						<input class="input form-control" id="profileImage" type="file" name="profileImage"/>
+						<input class="input form-control" id="profileImage" type="file" name="profileImage">
 					</div>
 					<br/>
 					<ul id = 'list'></ul>
@@ -82,7 +82,8 @@
 					    selectedHobbies.push($(this).attr('name'));
 					});
 
-					var fd = new FormData("profile",$("#profileImage").get(0));
+					var fd = new FormData();
+					fd.append("profileImage", $("#profileImage")[0].files[0]);
 					fd.append("username", $("#username").val());
 					fd.append("email", $("#email").val());
 					fd.append("password", $("#password").val());
@@ -94,11 +95,12 @@
 
 					if($("#password").val() == $("#confirmPassword").val()){
 	          $.ajax({
-	            type:'POST',
 	            url: '/matchingapp/registerUser/',
-							processData: false,
-              contentType: false,
-	            data: fd,
+							type:'POST',
+							data: fd,
+							contentType: 'multipart/form-data',
+        			processData: false,
+        			contentType: false,
 	            success: function(data){
 								if(data[0].success == "true"){
 									$("#message").html("Successfully registered user. Please login.")
@@ -132,8 +134,7 @@
 						url: '/matchingapp/getHobbies/',
 						dataType: "json",
 						success: this.loadHobbies,
-						error: function(req, err)
-						{
+						error: function(req, err){
 							console.log('JSON call failed', err);
 						}
 					});
