--- a/matchingapp/templates/matchingapp/home.html
+++ b/matchingapp/templates/matchingapp/home.html
@@ -46,7 +46,7 @@
 							var itemDiv = $("<div class='col'>").
 					    append( $("<div class='card'>")).
 							append( $("<img class='card-img-top' src='"+image+"' alt='Card image cap'><div class='card-body'>")).
-							append( $("<h5 class='card-title'>" + users[i] + "</h5><p class='card-text'>" + profiles[i].bio + "</p>You have " + matches[i] + " matches with this person!</p><a href='#' class='btn btnCard'>Like Profile<span><i class='fas fa-thumbs-up'></i></a></span></div></div>"));
+							append( $("<h5 class='card-title'>" + users[i] + "</h5><p class='card-text'>" + profiles[i].bio + "</p>You have " + matches[i] + " matches with this person!</p><a data-username='"+ users[i] +"' class='likeUser btn btnCard'>Like Profile<span><i class='fas fa-thumbs-up'></i></a></span></div></div>"));
 					 		$(".row").append(itemDiv);
 						}
 			     }
@@ -62,6 +62,22 @@
 								loadProfiles(content.users, content.matches, content.profiles)
 						 	}});
 					 }
+
+					$(document).on('click', ".likeUser", function(e){
+						e.preventDefault();
+						var username = $(this).data('username');
+						$.ajax({
+	            type: "PUT",
+	            url: "/matchingapp/userLikes/",
+	            data: JSON.stringify({'username': username}),
+	            dataType: "json",
+	            success: function(response) {
+								console.log("Success")
+							},
+							error: function(req, status, err){
+                console.log("Something went wrong", status, err)
+            },
+					});
 
 					$(document).on('click', '#logout', function (e){
 					    e.preventDefault();
